# cat_camera_platform

./: .gitignore  CMakeLists.txt  build.sh  install.sh  readme.md
scripts/: readme.md  run.sh  show_serial.py
src/: blink_test.c  encoder_test.c  icm42688_test.cpp  icm42688_test_interrupt.cpp  motor_pwm_test.cxx  motor_servo_test.c  motor_test.c  stepper_a4988_test.cpp  stepper_uln2003_test.cpp  vl53l0x_test.cpp
src/ICM42688/: ICM42688.cpp
